--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -36,7 +36,7 @@
   <ion-grid>
     <ion-row *ngIf="isRecruiter()">
       <ion-col col-6 class="animated zoomIn">
-        <ion-card class="summary">
+        <ion-card class="summary" (tap)="viewPostedJobs()">
           <ion-item>
             <div class="card-icon">
               <i class="fa fa-folder"></i>
@@ -49,14 +49,14 @@
         </ion-card>
       </ion-col>
       <ion-col col-6 class="animated zoomIn">
-        <ion-card class="summary">
+        <ion-card class="summary" (tap)="viewViewedJobs()">
           <ion-item>
             <div class="card-icon">
               <i class="fa fa-users"></i>
             </div>
             <div class="card-details" text-wrap>
-              <h2>{{viewedCandidates?.length || 0}}</h2>
-              <p>Viewed Candidates</p>
+              <h2>{{viewedJobs?.length || 0}}</h2>
+              <p>Viewed Jobs</p>
             </div>
           </ion-item>
         </ion-card>
@@ -91,17 +91,17 @@
         </ion-card>
       </ion-col>
     </ion-row>
-
+ 
     <ion-row>
       <ion-col col-6 class="animated zoomIn">
-        <ion-card class="summary" (tap)="viewRated()">
+        <ion-card class="summary" (tap)="viewRaters()">
           <ion-item>
             <div class="card-icon">
               <i class="fa fa-star"></i>
             </div>
             <div class="card-details" text-wrap>
-              <h2>{{rated?.length || 0}}</h2>
-              <p>Rated</p>
+              <h2>{{getMyRaters()}}</h2>
+              <p>Raters</p>
             </div>
           </ion-item>
         </ion-card>
