--- a/src/pages/ratings/ratings.html
+++ b/src/pages/ratings/ratings.html
@@ -37,7 +37,7 @@
       </div>
       <ion-card padding text-wrap class="not-found" *ngIf="!usersRatedMe || usersRatedMe.length < 1">
         <i class="fa fa-4x fa-star"></i>
-        <p>You have been rated yet</p>
+        <p>You have not been rated yet</p>
       </ion-card>
     </ion-list>
 
@@ -67,27 +67,4 @@
     </ion-list>
   </div>
 </ion-content>
-<!--           
-  <div [@listAnimation]="ratedUsers.length">
-    <ion-list *ngFor="let user of ratedUsers">
-      <ion-card>
-        <ion-item>
-          <ion-avatar class="border-dark" item-start>
-            <img [src]="profilePicture(user)" (error)="img.src = getDefaultProfilePic(user)"
-            #img alt="profile" class="profile-picture">
-          </ion-avatar>
-          <h2>{{user.firstname}} {{user.lastname}}</h2>
-          <p>
-            <i class="fa fa-calendar" item-start></i>
-            {{getDateRated(user)}}
-          </p>
-          <i class="fa fa-chevron-right" item-end></i>
-        </ion-item>
-      </ion-card>
-    </ion-list>
-  </div>
-  <ion-card padding text-wrap class="not-found" *ngIf="!ratedUsers || (ratedUsers && ratedUsers.length < 1)">
-    <i class="fa fa-4x fa-calendar"></i>
-    <p>You have not rated anyone yet</p>
-  </ion-card>
-</ion-content> -->
+ 
